specs/jenkins/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  loadBalancerIP: 104.40.255.148
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  # type: NodePort
  # ports:
  #   - port: 8080
  #     targetPort: 8080
  selector:
    app: jenkins
